--- a/image-event-handler/src/main/resources/application.yml
+++ b/image-event-handler/src/main/resources/application.yml
@@ -24,6 +24,9 @@ spring:
           executor-threads: ${APP_PUBSUB_EXECUTOR_THREAD_NUM:4}
           parallel-pull-count: ${APP_PUBSUB_PARALLEL_PULL_COUNT:1}
 
+jwt:
+  secret: ${JWT_SECRET}
+
 management:
   endpoint:
     health:
