--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -52,6 +52,7 @@
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
+                    <containerizingMode>packaged</containerizingMode>
                     <to>
                         <image>asia-southeast1-docker.pkg.dev/cdc-image-service/cdc-image/auth-service:${project.version}</image>
                     </to>
