--- a/image-event-handler/pom.xml
+++ b/image-event-handler/pom.xml
@@ -40,6 +40,7 @@
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
+                    <containerizingMode>packaged</containerizingMode>
                     <to>
                         <image>asia-southeast1-docker.pkg.dev/YOUR_PROJECT_ID/YOUR_REPO_NAME/image-event-handler:${project.version}</image>
                     </to>
