--- a/image-service/pom.xml
+++ b/image-service/pom.xml
@@ -44,6 +44,7 @@
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
+                    <containerizingMode>packaged</containerizingMode>
                     <to>
                         <image>asia-southeast1-docker.pkg.dev/YOUR_PROJECT_ID/YOUR_REPO_NAME/image-service:${project.version}</image>
                     </to>
