--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -182,6 +182,9 @@ jobs:
       - name: Set up Cloud SDK
         uses: 'google-github-actions/setup-gcloud@v2'
 
+      - name: Install gcloud beta components
+        run: gcloud components install beta --quiet
+
       - name: Deploy image-event-handler to Cloud Run
         run: |
           gcloud beta run worker-pools deploy image-event-handler-worker-pool \
