--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -151,33 +151,8 @@ jobs:
           IMAGE_URL=$(gcloud run services describe image-service --platform=managed --region=${{ env.REGION }} --format='value(status.url)')
           echo "url=$IMAGE_URL" >> $GITHUB_OUTPUT
 
-  deploy-image-event-handler:
-    needs: deploy-auth-service
-    runs-on: ubuntu-latest
-    outputs:
-      job_name: "image-event-handler-job"
-    steps:
-      - name: Authenticate to Google Cloud
-        uses: 'google-github-actions/auth@v2'
-        with:
-          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
-      - name: Set up Cloud SDK
-        uses: 'google-github-actions/setup-gcloud@v2'
-      - name: Deploy image-event-handler as a Cloud Run Job
-        run: |
-          gcloud run jobs deploy image-event-handler-job \
-            --image=${{ env.GAR_LOCATION }}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/image-event-handler:${{ github.sha }} \
-            --region=${{ env.REGION }} \
-            --project=${{ env.PROJECT_ID }} \
-            --cpu=1 --memory=1Gi \
-            --min-instances=1 --max-instances=20 \
-            --task-timeout=300s \
-            --service-account=cdc-image-api@cdc-image-service.iam.gserviceaccount.com \
-            --update-secrets="/tmp/ssl/certs/ca/ca.pem=db-root-cert:latest,/tmp/ssl/certs/client-cert/client-cert.pem=db-client-cert:latest,/tmp/ssl/certs/client-key/client-key.pem=db-client-key:latest,CDC_IMAGE_DB_URL=db-url:latest,JWT_SECRET=jwt-secret:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
-            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/tmp/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/tmp/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/tmp/ssl/certs/client-key/client-key.pem,APP_SUBSCRIPTION_UPLOAD_IMAGE=projects/cdc-image-service/subscriptions/cdc-image-uploaded-image-subscription"
-
   deployment-summary:
-    needs: [deploy-auth-service, deploy-image-service, deploy-image-event-handler]
+    needs: [deploy-auth-service, deploy-image-service]
     runs-on: ubuntu-latest
     steps:
       - name: Deployment Summary
@@ -185,6 +160,5 @@ jobs:
           echo "🚀 Deployment Summary:"
           echo "✅ Auth Service: ${{ needs.deploy-auth-service.outputs.auth_service_url }}"
           echo "✅ Image Service: ${{ needs.deploy-image-service.outputs.image_service_url }}"
-          echo "✅ Image Event Handler Job: ${{ needs.deploy-image-event-handler.outputs.job_name }}"
           echo ""
           echo "All services deployed successfully in the correct order!"
