--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,3 @@
-# .github/workflows/build-and-deploy.yml
-
 name: Build, Push, and Deploy Services
 
 on:
@@ -12,6 +10,9 @@ env:
   REGION: asia-southeast1
   GAR_LOCATION: asia-southeast1-docker.pkg.dev
   REPOSITORY: cdc-image
+  KEYRING: application-keyring
+  JWT_KEY: jwt-key
+  KEY_VERSION: 1
 
 jobs:
   build-shared-libs:
@@ -108,8 +109,8 @@ jobs:
             --min-instances=1 --max-instances=10 \
             --timeout=300s \
             --service-account=cdc-image-api@cdc-image-service.iam.gserviceaccount.com \
-            --update-secrets="/tmp/ssl/certs/ca/ca.pem=db-root-cert:latest,/tmp/ssl/certs/client-cert/client-cert.pem=db-client-cert:latest,/tmp/ssl/certs/client-key/client-key.pem=db-client-key:latest,CDC_IMAGE_DB_URL=db-url:latest,JWT_SECRET=jwt-secret:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
-            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/tmp/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/tmp/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/tmp/ssl/certs/client-key/client-key.pem,JWT_ACCESS_TOKEN_EXPIRATION_MIN=30,JWT_REFRESH_TOKEN_EXPIRATION_MIN=10080"
+            --update-secrets="/tmp/ssl/certs/ca/ca.pem=db-root-cert:latest,/tmp/ssl/certs/client-cert/client-cert.pem=db-client-cert:latest,/tmp/ssl/certs/client-key/client-key.pem=db-client-key:latest,CDC_IMAGE_DB_URL=db-url:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
+            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/tmp/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/tmp/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/tmp/ssl/certs/client-key/client-key.pem,JWT_ACCESS_TOKEN_EXPIRATION_MIN=30,JWT_REFRESH_TOKEN_EXPIRATION_MIN=10080,GCP_KMS_PROJECT_ID=${{ env.PROJECT_ID }},GCP_KMS_LOCATION=${{ env.REGION }},GCP_KMS_KEY_RING=${{ env.KEYRING }},GCP_KMS_JWT_KEY_NAME=${{ env.JWT_KEY }},GCP_KMS_JWT_KEY_VERSION=${{ env.KEY_VERSION }}"
           
           AUTH_URL=$(gcloud run services describe auth-service --platform=managed --region=${{ env.REGION }} --format='value(status.url)')
           echo "url=$AUTH_URL" >> $GITHUB_OUTPUT
@@ -145,8 +146,8 @@ jobs:
             --min-instances=1 --max-instances=5 \
             --timeout=300s \
             --service-account=cdc-image-api@cdc-image-service.iam.gserviceaccount.com \
-            --update-secrets="/tmp/ssl/certs/ca/ca.pem=db-root-cert:latest,/tmp/ssl/certs/client-cert/client-cert.pem=db-client-cert:latest,/tmp/ssl/certs/client-key/client-key.pem=db-client-key:latest,CDC_IMAGE_DB_URL=db-url:latest,JWT_SECRET=jwt-secret:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
-            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/tmp/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/tmp/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/tmp/ssl/certs/client-key/client-key.pem,GCP_STORAGE_BUCKET_NAME=cdc-image-bucket,GCP_STORAGE_PRESIGNED_URL_DURATION_MINUTE=15"
+            --update-secrets="/tmp/ssl/certs/ca/ca.pem=db-root-cert:latest,/tmp/ssl/certs/client-cert/client-cert.pem=db-client-cert:latest,/tmp/ssl/certs/client-key/client-key.pem=db-client-key:latest,CDC_IMAGE_DB_URL=db-url:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
+            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/tmp/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/tmp/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/tmp/ssl/certs/client-key/client-key.pem,GCP_STORAGE_BUCKET_NAME=cdc-image-bucket,GCP_STORAGE_PRESIGNED_URL_DURATION_MINUTE=15,GCP_KMS_PROJECT_ID=${{ env.PROJECT_ID }},GCP_KMS_LOCATION=${{ env.REGION }},GCP_KMS_KEY_RING=${{ env.KEYRING }},GCP_KMS_JWT_KEY_NAME=${{ env.JWT_KEY }},GCP_KMS_JWT_KEY_VERSION=${{ env.KEY_VERSION }}"
 
           IMAGE_URL=$(gcloud run services describe image-service --platform=managed --region=${{ env.REGION }} --format='value(status.url)')
           echo "url=$IMAGE_URL" >> $GITHUB_OUTPUT
