--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,7 +110,7 @@ jobs:
             --timeout=300s \
             --service-account=cdc-image-api@cdc-image-service.iam.gserviceaccount.com \
             --update-secrets="/tmp/ssl/certs/ca/ca.pem=db-root-cert:latest,/tmp/ssl/certs/client-cert/client-cert.pem=db-client-cert:latest,/tmp/ssl/certs/client-key/client-key.pem=db-client-key:latest,CDC_IMAGE_DB_URL=db-url:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
-            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/tmp/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/tmp/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/tmp/ssl/certs/client-key/client-key.pem,JWT_ACCESS_TOKEN_EXPIRATION_MIN=30,JWT_REFRESH_TOKEN_EXPIRATION_MIN=10080,JWT_GCP_KMS_PROJECT_ID=${{ env.PROJECT_ID }},JWT_GCP_KMS_LOCATION=${{ env.REGION }},JWT_GCP_KMS_KEYRING=${{ env.KEYRING }},JWT_GCP_KMS_JWT_KEY=${{ env.JWT_KEY }},JWT_GCP_KMS_JWT_KEY_VERSION=${{ env.KEY_VERSION }}"
+            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/tmp/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/tmp/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/tmp/ssl/certs/client-key/client-key.pem,JWT_ACCESS_TOKEN_EXPIRATION_MIN=30,JWT_REFRESH_TOKEN_EXPIRATION_MIN=10080,JWT_GCP_KMS_PROJECT_ID=${{ env.PROJECT_ID }},JWT_GCP_KMS_LOCATION=${{ env.REGION }},JWT_GCP_KMS_KEYRING=${{ env.KEYRING }},JWT_GCP_KMS_KEY=${{ env.JWT_KEY }},JWT_GCP_KMS_KEY_VERSION=${{ env.KEY_VERSION }}"
           
           AUTH_URL=$(gcloud run services describe auth-service --platform=managed --region=${{ env.REGION }} --format='value(status.url)')
           echo "url=$AUTH_URL" >> $GITHUB_OUTPUT
@@ -147,7 +147,7 @@ jobs:
             --timeout=300s \
             --service-account=cdc-image-api@cdc-image-service.iam.gserviceaccount.com \
             --update-secrets="/tmp/ssl/certs/ca/ca.pem=db-root-cert:latest,/tmp/ssl/certs/client-cert/client-cert.pem=db-client-cert:latest,/tmp/ssl/certs/client-key/client-key.pem=db-client-key:latest,CDC_IMAGE_DB_URL=db-url:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
-            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/tmp/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/tmp/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/tmp/ssl/certs/client-key/client-key.pem,GCP_STORAGE_BUCKET_NAME=cdc-image-bucket,GCP_STORAGE_PRESIGNED_URL_DURATION_MINUTE=15,JWT_GCP_KMS_PROJECT_ID=${{ env.PROJECT_ID }},JWT_GCP_KMS_LOCATION=${{ env.REGION }},JWT_GCP_KMS_KEYRING=${{ env.KEYRING }},JWT_GCP_KMS_JWT_KEY=${{ env.JWT_KEY }},JWT_GCP_KMS_JWT_KEY_VERSION=${{ env.KEY_VERSION }}"
+            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/tmp/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/tmp/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/tmp/ssl/certs/client-key/client-key.pem,GCP_STORAGE_BUCKET_NAME=cdc-image-bucket,GCP_STORAGE_PRESIGNED_URL_DURATION_MINUTE=15,JWT_GCP_KMS_PROJECT_ID=${{ env.PROJECT_ID }},JWT_GCP_KMS_LOCATION=${{ env.REGION }},JWT_GCP_KMS_KEYRING=${{ env.KEYRING }},JWT_GCP_KMS_KEY=${{ env.JWT_KEY }},JWT_GCP_KMS_KEY_VERSION=${{ env.KEY_VERSION }}"
 
           IMAGE_URL=$(gcloud run services describe image-service --platform=managed --region=${{ env.REGION }} --format='value(status.url)')
           echo "url=$IMAGE_URL" >> $GITHUB_OUTPUT
