--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ env:
   KEYRING: application-keyring
   JWT_KEY: jwt-key
   KEY_VERSION: 1
+  FE_BUCKET_NAME: cdc-image-fe
 
 jobs:
   build-shared-libs:
@@ -152,8 +153,41 @@ jobs:
           IMAGE_URL=$(gcloud run services describe image-service --platform=managed --region=${{ env.REGION }} --format='value(status.url)')
           echo "url=$IMAGE_URL" >> $GITHUB_OUTPUT
 
+  build-and-deploy-fe:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install Dependencies
+        run: |
+          cd fe
+          npm install
+
+      - name: Build Frontend
+        run: |
+          cd fe
+          npm run build
+
+      - name: Authenticate to Google Cloud
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: "${{ secrets.GCP_CREDENTIALS }}"
+
+      - name: Set up Cloud SDK
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: Upload to GCS
+        run: |
+          gcloud storage cp --recursive fe/dist/* gs://${{ env.FE_BUCKET_NAME }}/
+
   deployment-summary:
-    needs: [deploy-auth-service, deploy-image-service]
+    needs: [deploy-auth-service, deploy-image-service, build-and-deploy-fe]
     runs-on: ubuntu-latest
     steps:
       - name: Deployment Summary
